from menu import Menu

class LoginMenu(Menu):
    def open():
        pass
    
    def exit():
        pass