from abc import ABC

class Menu(ABC):
    pass