classDiagram
    class LoginService {
        <<Service>>
        attempt_login() Session?
    }

    class Session {
        user_id : int$
    }
    
    class Expense {
        id : int
        user_id : int
        amount : float
        description : str
        date : DateTime
    }

    class Approval {
        id : int
        expense_id : int
        status : StatusEnum
        reviewer : int?
        comment : str?
        review_date : DateTime?
    }

    class StatusEnum {
        <<enumeration>>
        PENDING
        APPROVED
        DENIED
    }

    class Menu {
        + open()*
        - exit()*
    }

    class LoginMenu {
        + open()$
        - attempt_login()$
        - exit()$
    }

    class MainMenu {
        + open()$
        - submit_expense()$
        - open_submission_menu()$
        - exit()$
    }

    class SubmissionMenu {
        + open()$
        - open_pending_submission_menu()$
        - view_history()$
        - exit()$
    }

    class PendingSubmissionMenu {
        + open()$
        - view_pending_submissions()$
        - edit_submission()$
        - delete_submission()$
        - exit()$
    }

    class Main {
        + open_login_menu()
    }

    class MenuHelper {
        + display_header_1(text)$
        + display_header_2(text)$
        + display_numbered_list(list)$
    }



    Approval o-- StatusEnum

    Menu <|-- LoginMenu
    Menu <|-- MainMenu
    Menu <|-- SubmissionMenu
    Menu <|-- PendingSubmissionMenu

    Main o-- LoginMenu
    LoginMenu o-- MainMenu
    MainMenu o-- SubmissionMenu
    SubmissionMenu o-- PendingSubmissionMenu

    LoginMenu o-- MenuHelper
    MainMenu o-- MenuHelper
    SubmissionMenu o-- MenuHelper
    PendingSubmissionMenu o-- MenuHelper

    LoginMenu o-- LoginService